--- a/MvcTodoApp_SV/Views/Home/Index.cshtml
+++ b/MvcTodoApp_SV/Views/Home/Index.cshtml
@@ -24,6 +24,13 @@
                         <button type="submit">اكتملت</button>
                     </form>
 
+                    <!-- Edit Form -->
+                    <form method="post" asp-action="EditTask" style="display:inline;">
+                        <input type="hidden" name="id" value="@task.Id" />
+                        <input type="text" name="newTitle" placeholder="تعديل المهمة" />
+                        <button type="submit">تعديل</button>
+                    </form>
+
                 }
             </li>
         }
